src/test/ui/issues/1-9999/issue-5844.stderr
error[E0133]: call to unsafe function is unsafe and requires unsafe function or block
  --> $DIR/issue-5844.rs:6:5
   |
LL |     issue_5844_aux::rand();
   |     ^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error: aborting due to previous error

For more information about this error, try `rustc --explain E0133`.
